# PotatoUI

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  build.sh  clean.sh  init.sh  premake5.lua
.cache/clangd/index/: ElementManager.cpp.5D68B11B994D5754.idx  ElementManager.hpp.9E954F28FF04EDE7.idx  core.cpp.1E5E1EF4816ADAD4.idx  core.cpp.26C53635BD66DB46.idx  core.hpp.15982D2B58DA824D.idx  core.hpp.A0A3EFFE6700E31E.idx  element.cpp.51A00BCBA84785BD.idx  element.hpp.FF17BC6F67D401D6.idx  main.cpp.44E863FAAF6FAA0C.idx  main.cpp.7B09C77764C4D023.idx
App/: Makefile
App/src/: main.cpp
Core/: Makefile
core/include/: ElementManager.hpp  Screen.hpp  box.hpp  core.hpp  element.hpp
core/src/: ElementManager.cpp  box.cpp  core.cpp  element.cpp
